<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            style="@style/caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_livro" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitulo"/>

        <TextView
            style="@style/caption"
            android:text="@string/autor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spnAutor" />

        <TextView
            style="@style/caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sinopse" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtSinopse"/>

    </LinearLayout>

</LinearLayout>
