<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin">

        <TableRow>

            <TextView
                android:id="@+id/txtGas"
                style="@style/texts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtGas" />

            <EditText
                android:id="@+id/edtGas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Ex.: 2.95"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txtAlc"
                style="@style/texts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtAlc" />

            <EditText
                android:id="@+id/edtAlc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Ex.: 1.76"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCalc"
                style="@style/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_span="2"
                android:layout_weight="1"
                android:text="@string/btnCalc" />
        </TableRow>
    </TableLayout>
</LinearLayout>